nginx-ingress-controller.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ingress
  namespace: kube-system
  labels:
    name: ingress
spec:
  selector:
    matchLabels:
      name: ingress
  template:
    metadata:
      labels:
        name: ingress
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.15.0
        name: ingress
        imagePullPolicy: IfNotPresent
        readinessProbe:
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
        livenessProbe:
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 15
          timeoutSeconds: 5
        # use downward API
        ports:
        - containerPort: 80
          hostPort: 80
        - containerPort: 443
          hostPort: 443
        args:
        - /nginx-ingress-controller
        - --default-backend-service=kube-system/default-http-backend
        - --configmap=$(POD_NAMESPACE)/nginx-conf
        - --profiling=false
        - --annotations-prefix=ingress.kubernetes.io
        - --enable-ssl-passthrough
      serviceAccountName: nginx-ingress-serviceaccount
