srtsignin-couchdb.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: srtsignin-couchdb
spec:
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: srtsignin-couchdb
    spec:
      containers:
      - name: couchdb
        image: couchdb:2.2
        ports:
        - containerPort: 5984
---
apiVersion: v1
kind: Service
metadata:
  name: couchdb
  labels:
    name: couchdb
spec:
  ports:
  - port: 5984
    name: node-client
    targetPort: 5984
    protocol: TCP
  selector:
    app: srtsignin-couchdb
  type: ClusterIP
