srtsignin-neo4j.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: srtsignin-neo4j
spec:
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: srtsignin-neo4j
    spec:
      containers:
      - name: neo4j
        image: neo4j:3.4.7
        ports:
        - containerPort: 7687
---
apiVersion: v1
kind: Service
metadata:
  name: neo4j
  labels:
    name: neo4j
spec:
  ports:
  - port: 7687
    targetPort: 7687
    protocol: TCP
  selector:
    app: srtsignin-neo4j
  type: ClusterIP
