srtsignin-redis.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: srtsignin-redis
spec:
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: srtsignin-redis
    spec:
      containers:
      - name: redis
        image: redis:4.0-alpine
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    name: redis
spec:
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
  selector:
    app: srtsignin-redis
  type: ClusterIP
