srtsignin-rethinkdb.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: srtsignin-rethinkdb
spec:
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: srtsignin-rethinkdb
    spec:
      containers:
      - name: rethinkdb
        image: rethinkdb:2.3.6
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: rethinkdb
  labels:
    name: rethinkdb
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: srtsignin-rethinkdb
  type: ClusterIP
