srtsignin-web-app.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: srtsignin-web-app
  annotations:
    flux.weave.works/automated: 'true'
spec:
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: srtsignin-web-app
    spec:
      containers:
      - name: web-app
        image: 'cjblink1/srtsignin-web-app:student-9bbf6cebe7fdca657ec5eb8a0dcb06f42262eb6b'
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: srtsignin-web-app-service
  labels:
    name: srtsignin-web-app-service
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: srtsignin-web-app
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: srtsignin-web-app
  annotations:
    flux.weave.works/automated: 'true'
  namespace: stage
spec:
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: srtsignin-web-app
    spec:
      containers:
      - name: web-app
        image: 'cjblink1/srtsignin-web-app:student-9bbf6cebe7fdca657ec5eb8a0dcb06f42262eb6b'
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: srtsignin-web-app-service
  labels:
    name: srtsignin-web-app-service
  namespace: stage
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: srtsignin-web-app
  type: ClusterIP
