srtsignin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "srtsignin"
  annotations: 
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - secretName: srtsignin-certs
  rules:
  - host: srtsign.in
    http:
      paths:
      - path: /api/role
        backend:
          serviceName: srtsignin-role-service
          servicePort: 80
      - path: /api/active-users
        backend:
          serviceName: srtsignin-active-user-service-spike
          servicePort: 80
      - path: /
        backend:
          serviceName: srtsignin-web-app-service
          servicePort: 80
  backend:
    serviceName: srtsignin-web-app-service
    servicePort: 80
